[package]
name = "apm_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.24.1"
device_query = "1.1.3"
winapi = { version = "0.3.9", features = ["winuser", "windef"] }

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[build]
target = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-gnu"]